# Repo2ROCm

./: .gitignore  =2024.0  =9.0.0  MANIFEST.in  README.md  analysis_report.md  analysis_results.jsonl  analyze_repos.py  baseline_benchmark.py  batch_commands.txt  batch_easylist_env.sh  benchmark_script.sh  pyproject.toml  requirements.txt  run_remaining.sh  setup.py
.claude/: CLAUDE.md
.claude/agents/: cuda-kernel-migrator.md  dependency-resolver.md  rocm-configurator.md  triton-kernel-agent.md
benchmark/: AMD_Agnostic_Accuracy_Benchmark_60.csv  LatestPaperBenchmark_Dataset.xlsx  format_convert.py  main.py  neurips2025_papers.csv  preprocess.py  preprocessed_dataset.csv
benchmark/harness/: __init__.py  enrich.py  main.py  report.py  runner_claude_cli.py  runner_repo2rocm.py  scheduler.py
benchmark/launch_logs/: launch_baseline.sh  launch_causal.sh  launch_kernel.sh
build_agent/: main.py  multi_main.py
build_agent/agents/: configuration.py  cuda_kernel_agent.py  kernel_converter_agent.py  paper_agent.py  paper_corpus.py  planner.py  researcher.py  triton_kernel_agent.py
build_agent/errors/: classifier.py  seed_patterns.py
build_agent/executor/: scheduler.py
build_agent/images/: __init__.py  rocm_ranker.py
build_agent/kernel_migration/: __init__.py  executor_adapter.py  scaffold.py
build_agent/knowledge/: amd_rocm_ecosystem.md  amd_rocm_repos.py  rocm_dynamic.py  rocm_knowledge.py
build_agent/learning/: causal_seed.py  distiller.py  graphify_provider.py  lesson_curator.py  memory_provider.py  mempalace_provider.py  observation_compactor.py
build_agent/observers/: __init__.py  observer_agent.py  reviewer.py  skill_loader.py  types.py
build_agent/rules/: engine.py
build_agent/storage/: build_fingerprint.py  kb_store.py  models.py  success_report.py  trajectory_store.py
build_agent/tools/: apt_download.py  code_edit.py  external_lookups.py  pip_download.py  poetryruntest.py  runtest.py  verify_paper_result.py  web_search.py
build_agent/utils/: claude_code_client.py  integrate_dockerfile.py  json_utils.py  llm.py  rich_logger.py  sandbox.py  split_cmd.py  tools_config.py
docs/: architecture.md  eval_artifacts_bug.md  next_research_plan.md  observability.md  permissions.md  progress_and_next_steps.md  r2r_plus_plus.md  skills.md  tools.md
examples/: mock_explore.py
kb/: repo2rocm.db  repo2rocm.db-shm  repo2rocm.db-wal  trajectories.db  trajectories.db-shm  trajectories.db-wal
repo2rocm/: __init__.py  bootstrap.py  cli.py  config.py
repo2rocm/agents/: __init__.py  definition.py  lifecycle.py  registry.py
repo2rocm/core/: api.py  context_pipeline.py  messages.py  permissions.py  query.py  state.py  terminal.py  token_count.py
repo2rocm/dockerfile/: __init__.py  replay.py  synthesizer.py
repo2rocm/knowledge/: __init__.py  rocm_data.py
repo2rocm/learning/: __init__.py  distiller.py  error_classifier.py  kb_store.py  trajectory_store.py
repo2rocm/mcp/: __init__.py  client.py
repo2rocm/observability/: __init__.py  checkpoints.py  logging.py  metrics.py  tracing.py  transcripts.py
repo2rocm/paper/: __init__.py  corpus.py  extract.py  fetch.py  types.py
repo2rocm/planning/: __init__.py  (+3 more)
tests/: conftest.py  test_causal_memory.py  test_image_retry_and_kb.py  test_kernel_converter_agent.py  test_kernel_migration_scaffold.py  test_observer_bus.py  test_paper_corpus.py  test_repo_corpus.py  test_researcher_profiles.py  test_rocm_dynamic.py  test_rocm_image_ranker.py
(+175 files in other folders)
