[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "repo2rocm"
version = "2.0.0a1"
description = "Production-grade multi-agent CUDA->ROCm migration system (v2 redesign)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Repo2ROCm contributors" }]
keywords = ["llm", "agent", "rocm", "amd", "docker", "migration"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "anthropic>=0.34",
    "tenacity>=8.2",
    "typer>=0.12",
    "rich>=13.7",
    "python-frontmatter>=1.1",
    "docker>=7.0",
    # Observability
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
    "prometheus-client>=0.20",
    "structlog>=24.1",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-requests",
]

[project.scripts]
repo2rocm = "repo2rocm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["repo2rocm"]

[tool.hatch.build.targets.wheel.force-include]
"repo2rocm/skills/builtin" = "repo2rocm/skills/builtin"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RET", "C4", "PIE", "PT", "RUF"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
warn_unused_ignores = false
exclude = ["tests/golden"]

[[tool.mypy.overrides]]
module = ["docker.*", "pexpect.*", "frontmatter.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "integration: requires docker / network",
    "golden: golden-set repos (slow)",
]
