# Build-system only. Project metadata (name, deps, scripts, etc.) lives in
# setup.py for maximum compatibility with older host setuptools (Ubuntu
# 20.04/22.04 ship setuptools 59.x which predates PEP 621 / `[project]`).
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# ── Tooling ─────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RET", "C4", "PIE", "PT", "RUF"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
warn_unused_ignores = false
exclude = ["tests/golden"]

[[tool.mypy.overrides]]
module = ["docker.*", "pexpect.*", "frontmatter.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "integration: requires docker / network",
    "golden: golden-set repos (slow)",
]
